// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModuleMenuItem should hide label if isLabelHidden is present 1`] = `
<DocumentFragment>
  <li
    class="c-list m-menu__list-item"
    itemprop="itemListElement"
    itemscope=""
    itemtype="itemType"
  >
    <a
      class="c-link m-menu__item"
      itemprop="bar"
      role="menuitem"
      tabindex="0"
      title="Menu item title"
    >
      <i
        aria-hidden="true"
        class="c-font-icon--foo m-menu__icon"
      />
      <span
        class="is-visually-hidden m-menu__label"
        itemprop="name"
      >
        Menu item label
      </span>
    </a>
    Module menu item children
  </li>
</DocumentFragment>
`;

exports[`ModuleMenuItem should render correctly 1`] = `
<DocumentFragment>
  <li
    class="c-list m-menu__list-item"
    itemprop="itemListElement"
    itemscope=""
    itemtype="itemType"
  >
    <a
      class="c-link m-menu__item"
      itemprop="bar"
      role="menuitem"
      tabindex="0"
      title="Menu item title"
    >
      <i
        aria-hidden="true"
        class="c-font-icon--foo m-menu__icon"
      />
      <span
        class="m-menu__label"
        itemprop="name"
      >
        Menu item label
      </span>
    </a>
    Module menu item children
  </li>
</DocumentFragment>
`;

exports[`ModuleMenuItem should return null if no path is given 1`] = `<DocumentFragment />`;
